--- a/.github/workflows/qt_test.yml
+++ b/.github/workflows/qt_test.yml
@@ -7,12 +7,10 @@ jobs:
     name: Windows Test
     runs-on: windows-latest
     steps:
-      - name: MSVC Environment Setup
-        uses: ilammy/msvc-dev-cmd@v1
       - name: Checkout
-        uses: actions/checkout@v2-beta
+        uses: actions/checkout@v3
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v3
       - name: Run QMake
         run: qmake src/app/app.pro
       - name: Build
@@ -26,9 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2-beta
+        uses: actions/checkout@v3
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v3
       - name: Run QMake
         run: qmake src/app/app.pro
       - name: Build
@@ -38,9 +36,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2-beta
+        uses: actions/checkout@v3
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v3
       - name: Run QMake
         run: qmake src/app/app.pro
       - name: Build
