--- a/.github/workflows/qt_build.yml
+++ b/.github/workflows/qt_build.yml
@@ -7,6 +7,8 @@ jobs:
     name: Windows (Build only)
     runs-on: windows-latest
     steps:
+      - name: MSVC Environment Setup
+        uses: ilammy/msvc-dev-cmd@v1.11.0
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install Qt
