--- a/.github/workflows/qt_build.yml
+++ b/.github/workflows/qt_build.yml
@@ -19,6 +19,11 @@ jobs:
         run: nmake debug
       - name: Deploy
         run: windeployqt.exe debug
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows_abimo
+          path: abimo
   linux:
     name: Linux (Build only)
     runs-on: ubuntu-latest
@@ -31,6 +36,11 @@ jobs:
         run: qmake src/app/app.pro
       - name: Build
         run: make
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: linux_abimo
+          path: abimo
   mac:
     name: Mac (Build only)
     runs-on: macos-latest
@@ -43,3 +53,8 @@ jobs:
         run: qmake src/app/app.pro
       - name: Build
         run: make
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: macos_abimo
+          path: abimo
