--- a/.github/workflows/qt_build.yml
+++ b/.github/workflows/qt_build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: windows_abimo
-          path: abimo
+          path: $HOME/abimo
   linux:
     name: Linux (Build only)
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: linux_abimo
-          path: abimo
+          path: $HOME/abimo
   mac:
     name: Mac (Build only)
     runs-on: macos-latest
@@ -57,4 +57,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: macos_abimo
-          path: abimo
+          path: $HOME/abimo
