--- a/.github/workflows/qt_build.yml
+++ b/.github/workflows/qt_build.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: linux_abimo_release
-          path: Abimo
+          path: release
   mac:
     name: Mac (Build only)
     runs-on: macos-latest
@@ -61,4 +61,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: macos_abimo_release
-          path: Abimo.app
+          path: release
