--- a/.github/workflows/qt_build.yml
+++ b/.github/workflows/qt_build.yml
@@ -24,9 +24,9 @@ jobs:
         with:
           name: windows_abimo_release
           path: release
-  linux:
-    name: Linux (Build only)
-    runs-on: ubuntu-latest
+  linux_1:
+    name: Linux Ubuntu 20.04 (Build only)
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -36,12 +36,27 @@ jobs:
         run: qmake src/app/app.pro
       - name: Build
         run: make
-      - name: List files
-        run: ls -l
       - name: Upload linux release
         uses: actions/upload-artifact@v3
         with:
-          name: linux_abimo_release
+          name: linux_ubuntu-20.04_abimo_release
+          path: release
+  linux_2:
+    name: Linux Ubuntu 22.04 (Build only)
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v3
+      - name: Run QMake
+        run: qmake src/app/app.pro
+      - name: Build
+        run: make
+      - name: Upload linux release
+        uses: actions/upload-artifact@v3
+        with:
+          name: linux_ubuntu-22.04_abimo_release
           path: release
   mac:
     name: Mac (Build only)
@@ -54,9 +69,7 @@ jobs:
       - name: Run QMake
         run: qmake src/app/app.pro
       - name: Build
-        run: make
-      - name: List files
-        run: ls -l        
+        run: make   
       - name: Upload macos release
         uses: actions/upload-artifact@v3
         with:
