--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@ data
 src/app/Abimo.pro.user
 .vscode
 .qmake*
-Makefile
+Makefile*
 *.o
 src/app/app.app
 moc_*
 .DS_STore
+.RData
+.RHistory
 *.TMP
+*.log
+release
